--- a/content/solutions/uva-6527.md
+++ b/content/solutions/uva-6527.md
@@ -12,7 +12,7 @@ draft: false
 
 ### 分析
 
-​	数学题。假设a , b , c是相邻且递增的两个满二进制数，则 [b , (b+c)/2) 内的数字去掉第二位的 0 ，可以看作是 [a , b) 之间的数字。[(b+c)/2 , c)内的数字去掉首位的 1 ，可以看作是[b , c)之间的数字。设 k , n 为两个相邻的满二进制数，g(n) 表示[k , n)之间 1 的数量，则 g(c) = g(c/2)*2+log(c/2)。
+​	数学题。假设a , b , c是相邻且递增的两个满二进制数，则 [b , (b+c)/2) 内的数字去掉第二位的 0 ，可以看作是 [a , b) 之间的数字。[(b+c)/2 , c)内的数字去掉首位的 1 ，可以看作是[b , c)之间的数字。设 k , n 为两个相邻的满二进制数，g(n) 表示[k , n)之间 1 的数量，则 g(c) = g(c/2)*2+log(c/2)。这里用c/2替换掉了b。
 
 ​	为了方便推导出 g(b) 的函数式，设x = log(c)，则 g(2<sup>x</sup>) = 2·g(2<sup>x-1</sup>)+log(2<sup>x-1</sup>)，设替换 2<sup>x</sup> 可得 g(x) = 2·g(x-1)+log(x) 。
 
