--- a/content/solutions/uva-6531.md
+++ b/content/solutions/uva-6531.md
@@ -2,6 +2,7 @@
 title: "Uva6531 - Go up the Ultras"
 date: 2020-03-09T20:45:13+08:00
 draft: false
+comments: true
 ---
 
 [题目链接](https://www.e-olymp.com/en/problems/6583)，系 [Regionals 2013 - Latin America G题](https://icpcarchive.ecs.baylor.edu/index.php?option=onlinejudge&page=show_problem&problem=4542)
