--- a/content/solutions/uva-6531.md
+++ b/content/solutions/uva-6531.md
@@ -9,7 +9,7 @@ comments: true
 
 ### 题目大意 
 
-​	有 n 座相连且相邻高度不同的山峰1~n，如果一座山峰与它左边和右边高于它的山峰之间，存在比它低150000cm的山峰，就认为这座山峰是 Ultras ，求所有的 Ultras 数量。
+​	有 n 座相连且相邻高度不同的山峰1~n，如果一座山峰与它左边和右边高于它的山峰之间，存在比它低150000cm的山峰，就认为这座山峰是 Ultra ，求 Ultras 的数量。
 
 ### 分析
 
