--- a/content/solutions/uva-6527.md
+++ b/content/solutions/uva-6527.md
@@ -7,6 +7,8 @@ comments: true
 
 [题目链接](https://www.e-olymp.com/en/problems/6583)，系 [Regionals 2013 - Latin America C题](https://icpcarchive.ecs.baylor.edu/index.php?option=onlinejudge&page=show_problem&problem=4538)
 
+知识点：无
+
 ### 题目大意
 
 给出 a 和 b (1 ≤ a ≤ b ≤ 10<sup>16</sup>) ，求两数之间所有数字的二进制下 1 的数量。
