--- a/content/solutions/uva-6531.md
+++ b/content/solutions/uva-6531.md
@@ -7,6 +7,8 @@ comments: true
 
 [题目链接](https://www.e-olymp.com/en/problems/6583)，系 [Regionals 2013 - Latin America G题](https://icpcarchive.ecs.baylor.edu/index.php?option=onlinejudge&page=show_problem&problem=4542)
 
+知识点：单调栈，RMQ
+
 ### 题目大意 
 
 ​	有 n 座相连且相邻高度不同的山峰1~n，如果一座山峰与它左边和右边高于它的山峰之间，存在比它低150000cm的山峰，就认为这座山峰是 Ultra ，求 Ultras 的数量。
