--- a/content/solutions/Uva-6425.md
+++ b/content/solutions/Uva-6425.md
@@ -15,7 +15,7 @@ comments: true
 
 ### 分析
 
-没啥好说的，分两种情况bfs，第一种是只走新的边，第二种是只走旧的边。不能混走，可以证明在走单种边的情况下才会有最短路，给出简易证明：假设最短路a--b--c的边a--b为第一种边，b--c为第二种边，但由于图是完全图，有边a--c，无论a--c为哪种边，`dis(a,b)+dis(b,c)>len(a,c)`必定成立，与假设矛盾，得证。
+没啥好说的，分两种情况bfs，第一种是只走新的边，第二种是只走旧的边。不能混走，可以证明在走单种边的情况下才会有最短路，给出简易证明：假设最短路a--b--c的边a--b为第一种边，b--c为第二种边，但由于图是完全图，有边a--c，无论a--c为哪种边， dis(a,b)+dis(b,c)>len(a,c) 必定成立，与假设矛盾，得证。
 
 在第二种情况bfs时，可以设一个变量，表示当前未走过的点和已经走过的点（这里用的是链表，走过的点直接删除），在此基础上bfs。
 
