--- a/content/solutions/Uva-6425.md
+++ b/content/solutions/Uva-6425.md
@@ -3,6 +3,7 @@ title: "Uva-6425 - InterCity"
 date: 2020-03-15T00:55:14+08:00
 draft: false
 comments: true
+tags: ["BFS"]
 ---
 
 [题目链接](https://www.e-olymp.com/en/problems/6171)，系 [Regionals 2013](https://icpcarchive.ecs.baylor.edu/index.php?option=com_onlinejudge&Itemid=8&category=591) >> [Europe - Southeastern B题](https://icpcarchive.ecs.baylor.edu/index.php?option=com_onlinejudge&Itemid=8&category=613) 
