--- a/content/skills/原型链.md
+++ b/content/skills/原型链.md
@@ -69,5 +69,5 @@ Function.__proto__ === Function.prototype // true
 
 经典老图
 
-![jsobj_full](C:\Users\1aoMn\Desktop\jsobj_full.jpg)
+![jsobj_full.jpg](https://i.loli.net/2020/09/25/aSvQ6XxiDusJzd7.jpg)
 
