--- a/content/skills/原型链.md
+++ b/content/skills/原型链.md
@@ -42,6 +42,7 @@ Person.__proto__ === Function.prototype // true
 
 ```javascript
 Person.prototype.__proto__ === Object.prototype // true
+Object.prototype.__proto__ // null
 ```
 
 
@@ -66,7 +67,7 @@ Function.__proto__ === Function.prototype // true
 
 所以说普通函数都是`Function`的实例，他们的`__proto__`都指向`Function.prototype`。
 
-而根据规范说明，`Function.prototype`本身是一个函数对象，它继承自`Object.prototype`，但``Object.prototype``自身没有`prototype`属性。
+而根据规范，`Function.prototype`本身是一个函数对象，它继承自`Object.prototype`。
 
 在`ECMA`规范[15.2.4](http://www.ecma-international.org/ecma-262/5.1/#sec-15.2.4)中：
 
